# mera-jax

./: .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.complete  Dockerfile.optimized  README.md  Untitled.ipynb  build_notes.md  docker_env_info.txt  environment_setup.md  expectation.py  hamiltonians.py  network.py  optimization.py  pyproject.toml  requirements_cuda.txt  setup_environment.sh
.github/workflows/: docker-build.yml
examples/: tracking_example.py  tracking_example.py.bak
results/baselines/: a40_baseline_20250713_154828.json
src/mera/: network.py
src/utils/: tracking.py
