[tool.poetry]
name = "mera-jax"
version = "0.1.0"
description = "Multi-scale Entanglement Renormalization Ansatz (MERA) simulation using JAX"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jax = "^0.4.36"
jaxlib = "^0.4.36"
numpy = "~1.26.4"
flax = "^0.8.0"
optax = "^0.2.2"
aim = "^3.17.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
