[tool.poetry]
name = "mera-jax"
version = "0.1.0"
description = "Multi-scale Entanglement Renormalization Ansatz (MERA) simulation using JAX"
authors = ["akatsuki287623490"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "~1.26.4"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
flax = "^0.10.7"
optax = "^0.2.5"
aim = "^3.29.1"
# JAXはDockerfile内でpip installする

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.13.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
cuda = ["jax", "jaxlib"]
